maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:25: error: '(' expected but identifier found.
  if getIndication(x,y)>0{
     ^ShortestPathMaze:29: error: illegal start of simple expression
}
^